# federated-data-system-design

./: .env.example  .gitignore  README.md  abc.sh  connect.sql  customer_360_view_results.csv  debug_spark.py  insurance_seed.sql  main.py  mcp.client.config.json  pyproject.toml  run.mcp.sh
generator/: business.md  car_insurance.py  car_insurance.sql  house_insurance.py  house_insurance.sql  travel_insurance.py  travel_insurance.sql
generator/dml/: QUNFEI_WU_SUMMARY.md  README.md  car_insurance_data.sql  house_insurance_data.sql  qunfei_wu_car_insurance.sql  qunfei_wu_house_insurance.sql  qunfei_wu_travel_insurance.sql  travel_insurance_data.sql
services/datahub/: docker-compose.yml  pyproject.toml  readme.md
src/: customer360.py  customer_360_view.py  data_sources.py  databricks_source.py  datahub_register.py  federation_setup.py  mysql_source.py  postgres_source.py  settings.py  snowflake_source.py  trino_catalogs.py  trino_client.py
tests/: run.trino.sh  test_customer360.py  test_customer_360_real.py  test_customer_360_view.py  test_federation.py  test_travel_insurance.py  test_trino_catalogs.py  test_trino_catalogs_logic.py
