[project]
name = "federated-data-system-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acryl-datahub[datahub-rest,kafka,postgres,snowflake,unity-catalog]>=1.3.1.3",
    "duckdb>=1.4.2",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "trino>=0.321.0",
]
